# serial-terminal

./: index.html  package-lock.json  package.json  test-emulator-core.mjs  vite.config.js
src/: App.svelte  emulatorCore.js  main.js  stores.js  tauriApi.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: checksums.rs  commands.rs  lib.rs  main.rs  models.rs  protocol.rs  serial_port.rs  state.rs
src/components/: AutoSendPanel.svelte  ChecksumTool.svelte  EmulatorPanel.svelte  LogPanel.svelte  MonitorPanel.svelte  ParseResults.svelte  ProtocolEditor.svelte  ScriptEditor.svelte  SerialTab.svelte  Sidebar.svelte  StatusBar.svelte  TabBar.svelte  TopBar.svelte
src/styles/: global.css
